# ashford

./: .gitignore  CLAUDE.md  README.md
.rmfilter/config/: rmplan.yml
.rmfilter/reviews/: incremental_metadata.json  review-2-2025-11-29T07-19-20-572Z.json  review-2-2025-11-29T07-21-45-916Z.json
docs/: configuration.md  data_model.md  decision_engine.md  discord.md  gmail_integration.md  index.md  job_queue.md  opentelemetry.md  overview.md  rules_assistant.md  rules_engine.md  svelte_remote_functions.md  web_ui.md
server/: CLAUDE.md  Cargo.toml
server/.cargo/: config.toml
server/crates/ashford-core/: .gitignore  Cargo.toml
server/crates/ashford-core/src/: accounts.rs  config.rs  constants.rs  db.rs  labels.rs  lib.rs  messages.rs  migrations.rs  pubsub.rs  pubsub_listener.rs  queue.rs  telemetry.rs  threads.rs  worker.rs
server/crates/ashford-core/src/api/: mod.rs  types.rs
server/crates/ashford-core/src/decisions/: mod.rs  policy.rs  repositories.rs  safety.rs  types.rs
server/crates/ashford-core/src/gmail/: client.rs  mime_builder.rs  mod.rs  oauth.rs  parser.rs  types.rs
server/crates/ashford-core/src/jobs/: action_gmail.rs  approval_notify.rs  backfill_gmail.rs  classify.rs  history_sync_gmail.rs  ingest_gmail.rs  labels_sync_gmail.rs  mod.rs  outbound_send.rs  undo_action.rs  unsnooze_gmail.rs
server/crates/ashford-core/src/llm/: decision.rs  error.rs  mock.rs  mod.rs  prompt.rs  repository.rs  types.rs
server/crates/ashford-core/src/rules/: conditions.rs  deterministic.rs  mod.rs  repositories.rs  types.rs
server/crates/ashford-core/tests/: action_gmail_flow.rs  export_ts_types.rs  ingest_flow.rs  llm_integration.rs  llm_prompt_decision_flow.rs
server/crates/ashford-server/: Cargo.toml
server/crates/ashford-server/src/: main.rs
server/crates/ashford-server/src/api/: accounts.rs  actions.rs  labels.rs  mod.rs  rules.rs
server/migrations/: 001_initial.sql  002_add_job_completion_fields.sql  003_add_thread_message_unique_indices.sql  004_add_org_user_columns.sql  005_add_llm_calls.sql  006_add_labels_table.sql  007_add_unique_undo_links.sql
tasks/: 1-ashford-ai-mail-agent-project-bootstrap.plan.md  10-gmail-api-client-account-management.plan.md  11-message-ingestion-pub-sub-ingest-gmail.plan.md  12-history-sync-backfill.plan.md  13-phase-4-1-rule-data-access-layer.plan.md  14-phase-4-2-deterministic-rule-engine.plan.md  15-phase-4-3-llm-provider-integration.plan.md  16-phase-4-4-prompt-construction-llm-decision-engine.plan.md  17-phase-4-5-safety-enforcement-post-processing.plan.md  18-phase-4-6-classify-job-handler-integration.plan.md  19-basic-org-user-in-data-schema-and-queries.plan.md  2-milestone-1-rust-skeleton-queue.plan-agent-output.md  2-milestone-1-rust-skeleton-queue.plan.md  20-phase-4-5-thread-context-builder-for-llm-prompts.plan.md  21-llm-based-direction-violation-detection.plan.md  22-gmail-actions-core-operations.plan.md  23-gmail-actions-snooze.plan.md  24-gmail-actions-outbound-email-undo.plan.md  25-gmail-label-management-system.plan.md  26-gmail-snooze-management-reschedule-and-cancel.plan.md  26-ui-foundation-types-api-client-and-layout.plan.md  27-actions-feature-history-list-and-detail-pages.plan.md  28-rules-feature-list-edit-and-reorder.plan.md  29-settings-feature-configuration-view.plan.md  3-milestone-2-gmail-ingest-pub-sub-history.plan.md  30-ui-foundation-types-api-client-and-layout.plan.md  31-gmail-actions-undo-system.plan.md  4-milestone-3-rule-engine-decision-pipeline.plan.md  5-milestone-4-gmail-actions.plan.md  6-milestone-5-discord-bot.plan.md  7-milestone-6-sveltekit-ui.plan.md  8-milestone-7-rules-assistant.plan.md  9-stale-job-recovery.plan.md
web/: .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
web/src/routes/: +layout.svelte
(+25 files in other folders)
