[workspace]
members = [
    "crates/ashford-core",
    "crates/ashford-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.7"
config = "0.14.0"
libsql = "0.9.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.0"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json", "registry", "ansi", "time"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
rand = "0.8.5"
async-trait = "0.1.83"
tokio-util = "0.7.12"
futures = "0.3.31"
genai = "0.4.4"
