[package]
name = "ashford-core"
version.workspace = true
edition.workspace = true

[dependencies]
config = { workspace = true }
libsql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
once_cell = "1.19.0"
tempfile = "3.12.0"
