[package]
name = "ashford-core"
version.workspace = true
edition.workspace = true

[features]
default = []
llm-integration = []

[dependencies]
config = { workspace = true }
libsql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
genai = { workspace = true }
schemars.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip"] }
base64 = "0.22.1"
google-cloud-pubsub = { version = "0.30.0", default-features = false, features = ["auth", "google-cloud-auth", "rustls-tls"] }
google-cloud-auth = { version = "0.17.2", default-features = false, features = ["rustls-tls"] }
google-cloud-gax = "0.19.2"
google-cloud-googleapis = "0.16.1"
regex = "1.12.2"
html2text = "0.11.0"

[dev-dependencies]
once_cell = "1.19.0"
tempfile = "3.12.0"
wiremock = "0.6.5"
