[package]
name = "ashford-server"
version.workspace = true
edition.workspace = true

[dependencies]
ashford-core = { path = "../ashford-core" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
